@@ -5,7 +5,7 @@ $lang = [
     'grouppm_nomsg' => 'There is not any text in your message!',
     'grouppm_nogrp' => 'You have to select a group to send your message',
     'grouppm_this' => "\nThis message was set to the following class(es) ",
-    'grouppm_sent' => 'Message sent!',
+    'grouppm_sent' => 'Message sent',
     'grouppm_again' => 'Unable to send the message try again!',
     'grouppm_nousers' => 'There are not any users in the groups you selected!',
     'grouppm_staff' => 'Site Staff',
