@@ -5,7 +5,7 @@ $lang = [
     'grouppm_nomsg' => 'Nu aţi scris nici un text în mesajul dumneavoastră!',
     'grouppm_nogrp' => 'Trebuie să selectaţi o grupă pentru a trimite mesajul',
     'grouppm_this' => "\nAcest mesaj a fost setat pentru clasa/clasele ",
-    'grouppm_sent' => 'Mesaj trimis!',
+    'grouppm_sent' => 'Mesaj trimis',
     'grouppm_again' => 'Imposibil de a trimite acest mesaj, vă rugăm încercaţi din nou!',
     'grouppm_nousers' => 'Nu există nici un utilizator în grupa pe care aţi selectat-o!',
     'grouppm_staff' => 'Personalul siteului',
